--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@ width: ;
 }
 }
 </style>
-<a href="https://acaoquesalva.space/checkout/30" target="_blank" class="btn button-QzinMj5111884-element ">
+<a href="https://aleksandrrion.github.io/checkout/30" target="_blank" class="btn button-QzinMj5111884-element ">
 R$ 30,00
 </a>
 </div>
@@ -648,7 +648,7 @@ width: ;
 }
 }
 </style>
-<a href="https://acaoquesalva.space/checkout/50" target="_blank" class="btn button-qjHbEm5111884-element ">
+<a href="https://aleksandrrion.github.io/checkout/50" target="_blank" class="btn button-qjHbEm5111884-element ">
 R$: 50,00
 </a>
 </div>
@@ -727,7 +727,7 @@ width: ;
 }
 }
 </style>
-<a href="https://acaoquesalva.space/checkout/75" target="_blank" class="btn button-BMleRu5148789-element ">
+<a href="https://aleksandrrion.github.io/checkout/75" target="_blank" class="btn button-BMleRu5148789-element ">
 R$ 75,00
 </a>
 </div>
@@ -768,7 +768,7 @@ width: ;
 }
 }
 </style>
-<a href="https://acaoquesalva.space/checkout/100" target="_blank" class="btn button-CIkrtu5148789-element ">
+<a href="https://aleksandrrion.github.io/checkout/100" target="_blank" class="btn button-CIkrtu5148789-element ">
 R$: 100,00
 </a>
 </div>
@@ -847,7 +847,7 @@ width: ;
 }
 }
 </style>
-<a href="https://acaoquesalva.space/checkout/150" target="_blank" class="btn button-uRfRRk5167208-element ">
+<a href="https://aleksandrrion.github.io/checkout/150" target="_blank" class="btn button-uRfRRk5167208-element ">
 R$ 150,00
 </a>
 </div>
@@ -888,7 +888,7 @@ width: ;
 }
 }
 </style>
-<a href="https://acaoquesalva.space/checkout/200" target="_blank" class="btn button-sNbGhY5167208-element ">
+<a href="https://aleksandrrion.github.io/checkout/200" target="_blank" class="btn button-sNbGhY5167208-element ">
 R$: 200,00
 </a>
 </div>
@@ -967,7 +967,7 @@ width: ;
 }
 }
 </style>
-<a href="https://acaoquesalva.space/checkout/300" target="_blank" class="btn button-YpJySG5188158-element ">
+<a href="https://aleksandrrion.github.io/checkout/300" target="_blank" class="btn button-YpJySG5188158-element ">
 R$ 300,00
 </a>
 </div>
@@ -1008,7 +1008,7 @@ width: ;
 }
 }
 </style>
-<a href="https://acaoquesalva.space/checkout/400" target="_blank" class="btn button-seEdpn5188158-element ">
+<a href="https://aleksandrrion.github.io/checkout/400" target="_blank" class="btn button-seEdpn5188158-element ">
 R$: 400,00
 </a>
 </div>
@@ -1087,7 +1087,7 @@ width: ;
 }
 }
 </style>
-<a href="https://acaoquesalva.space/checkout/500" target="_blank" class="btn button-dRGFFA6674304-element ">
+<a href="https://aleksandrrion.github.io/checkout/500" target="_blank" class="btn button-dRGFFA6674304-element ">
 R$ 500,00
 </a>
 </div>
@@ -1128,7 +1128,7 @@ width: ;
 }
 }
 </style>
-<a href="https://acaoquesalva.space/checkout/1000" target="_blank" class="btn button-NSMlIf6674304-element ">
+<a href="https://aleksandrrion.github.io/checkout/1000" target="_blank" class="btn button-NSMlIf6674304-element ">
 R$: 1000,00
 </a>
 </div>
